--- a/§4QuackDuck §cTXT/assets/minecraft/lang/en_gb.json
+++ b/§4QuackDuck §cTXT/assets/minecraft/lang/en_gb.json
@@ -1,12 +1,12 @@
 {
-  "item.minecraft.chicken": "Raw Duck",
-  "item.minecraft.cooked_chicken": "Cooked Duck",
+  "item.minecraft.chicken":"Raw Duck §r2♠ §61.2♠§r",
+  "item.minecraft.cooked_chicken":"Roast Duck §r6♠ §67.2♠§r",
   "item.minecraft.chicken_spawn_egg": "Duck Spawn Egg",
   "entity.minecraft.chicken": "Duck",
   "subtitles.entity.chicken.ambient": "Duck Quacks",
   "subtitles.entity.chicken.death": "Duck Dies :(",
   "subtitles.entity.chicken.egg": "Duck lays egg",
-  "subtitles.entity.chicken.hurt": "Duck hurts",
+  "subtitles.entity.chicken.hurt": "Duck hurts :(",
   "item.minecraft.baked_potato":"Jacket Potato §r5♠ §66♠§r",
   "item.minecraft.cooked_rabbit":"Cooked Rabbit §r5♠ §66♠§r",
   "item.minecraft.bread":"Bread §r5♠ §66♠§r",
@@ -24,7 +24,6 @@
   "item.minecraft.potato":"Potato §r1♠ §60.6♠§r",
   "item.minecraft.apple":"Apple §r4♠ §62.4♠§r",
   "item.minecraft.carrot":"Carrot §r3♠ §63.6♠§r",
-  "item.minecraft.chicken":"Raw Chicken §r2♠ §61.2♠§r",
   "item.minecraft.cookie":"Biscuit §r2♠ §60.4♠§r",
   "item.minecraft.dried_kelp":"Dried Kelp §r1♠ §60.6♠§r",
   "item.minecraft.pumpkin_pie":"Pumpkin Pie §r8♠ §64.8♠§r",
@@ -32,7 +31,6 @@
   "item.minecraft.honey_bottle":"Honey Bottle §r6♠ §61.2♠§r",
   "item.minecraft.cooked_cod":"Cooked Cod §r5♠ §66♠§r",
   "item.minecraft.rotten_flesh":"Rotten Flesh §r4♠ §60.8♠§r",
-  "item.minecraft.cooked_chicken":"Roast Chicken §r6♠ §67.2♠§r",
   "item.minecraft.tropical_fish":"Tropical Fish §r1♠ §60.2♠§r",
   "item.minecraft.mutton":"Raw Mutton §r2♠ §61.2♠§r",
   "item.minecraft.salmon":"Raw Salmon §r2♠ §60.4♠§r",
