--- a/§4QuackDuck §cTXT/assets/minecraft/lang/pl_pl.json
+++ b/§4QuackDuck §cTXT/assets/minecraft/lang/pl_pl.json
@@ -1,6 +1,6 @@
 {
-  "item.minecraft.chicken": "Surowa Kaczka",
-  "item.minecraft.cooked_chicken": "Pieczona Kaczka",
+  "item.minecraft.chicken":"Surowa Kaczka §r2♠ §61.2♠§r",
+  "item.minecraft.cooked_chicken":"Pieczona Kaczka §r6♠ §67.2♠§r",
   "item.minecraft.chicken_spawn_egg": "Jajko Spawnujące Kaczkę",
   "entity.minecraft.chicken": "Kaczka",
   "subtitles.entity.chicken.ambient": "Kaczka Kwacze",
@@ -27,13 +27,11 @@
   "item.minecraft.potato":"Ziemniak §r1♠ §60.6♠§r",
   "item.minecraft.apple":"Jabłko §r4♠ §62.4♠§r",
   "item.minecraft.carrot":"Marchewka §r3♠ §63.6♠§r",
-  "item.minecraft.chicken":"Surowy kurczak §r2♠ §61.2♠§r",
   "item.minecraft.cookie":"Ciastko §r2♠ §60.4♠§r",
   "item.minecraft.dried_kelp":"Suszony wodorost §r1♠ §60.6♠§r",
   "item.minecraft.pumpkin_pie":"Placek dyniowy §r8♠ §64.8♠§r",
   "item.minecraft.porkchop":"Surowy schab §r3♠ §61.8♠§r",
   "item.minecraft.honey_bottle":"Butelka miodu §r6♠ §61.2♠§r","item.minecraft.cooked_cod":"Pieczony dorsz §r5♠ §66♠§r","item.minecraft.rotten_flesh":"Zgniłe mięso §r4♠ §60.8♠§r",
-  "item.minecraft.cooked_chicken":"Pieczony kurczak §r6♠ §67.2♠§r",
   "item.minecraft.tropical_fish":"Ryba tropikalna §r1♠ §60.2♠§r",
   "item.minecraft.mutton":"Surowa baranina §r2♠ §61.2♠§r",
   "item.minecraft.salmon":"Surowy łosoś §r2♠ §60.4♠§r",
