--- a/§4QuackDuck §cTXT/assets/minecraft/lang/pl_pl.json
+++ b/§4QuackDuck §cTXT/assets/minecraft/lang/pl_pl.json
@@ -7,6 +7,7 @@
   "subtitles.entity.chicken.death": "Kaczka Umiera :(",
   "subtitles.entity.chicken.egg": "Kaczka Składa Jajo",
   "subtitles.entity.chicken.hurt": "Kaczkę Boli :(",
+  "options.fov.max": "Quack Pro",
   "item.minecraft.baked_potato":"Pieczony ziemniak §r5♠ §66♠§r",
   "item.minecraft.cooked_rabbit":"Pieczony królik §r5♠ §66♠§r",
   "item.minecraft.bread":"Chleb §r5♠ §66♠§r",
