--- a/§4QuackDuck §cTXT/assets/minecraft/lang/en_us.json
+++ b/§4QuackDuck §cTXT/assets/minecraft/lang/en_us.json
@@ -7,6 +7,7 @@
   "subtitles.entity.chicken.death": "Duck Dies :(",
   "subtitles.entity.chicken.egg": "Duck lays egg",
   "subtitles.entity.chicken.hurt": "Duck hurts :(",
+  "options.fov.max": "Quack Pro",
   "item.minecraft.baked_potato":"Jacket Potato §r5♠ §66♠§r",
   "item.minecraft.cooked_rabbit":"Cooked Rabbit §r5♠ §66♠§r",
   "item.minecraft.bread":"Bread §r5♠ §66♠§r",
