colored enchants + lvl to 10

--- a/§4QuackDuck §cTXT/assets/minecraft/lang/en_gb.json
+++ b/§4QuackDuck §cTXT/assets/minecraft/lang/en_gb.json
@@ -40,5 +40,53 @@
   "item.minecraft.cooked_salmon":"Cooked Salmon §r6♠ §69.6♠§r",
   "item.minecraft.golden_carrot":"Golden Carrot §r6♠ §614.4♠§r",
   "item.minecraft.rabbit":"Raw Rabbit §r3♠ §61.8♠§r",
+  "enchantment.minecraft.aqua_affinity": "\u00a7bAqua Affinity",
+  "enchantment.minecraft.bane_of_arthropods": "\u00a7cBane of Arthropods",
+  "enchantment.minecraft.binding_curse": "\u00a74Curse of Binding",
+  "enchantment.minecraft.blast_protection": "\u00a7bBlast Protection",
+  "enchantment.minecraft.channeling": "\u00a7dChannelling",
+  "enchantment.minecraft.depth_strider": "\u00a7bDepth Strider",
+  "enchantment.minecraft.efficiency": "\u00a7eEfficiency",
+  "enchantment.minecraft.feather_falling": "\u00a7bFeather Falling",
+  "enchantment.minecraft.fire_aspect": "\u00a7cFire Aspect",
+  "enchantment.minecraft.fire_protection": "\u00a7bFire Protection",
+  "enchantment.minecraft.flame": "\u00a76Flame",
+  "enchantment.minecraft.fortune": "\u00a7eFortune",
+  "enchantment.minecraft.frost_walker": "\u00a7bFrost Walker",
+  "enchantment.minecraft.impaling": "\u00a7dImpaling",
+  "enchantment.minecraft.infinity": "\u00a76Infinity",
+  "enchantment.minecraft.knockback": "\u00a7cKnockback",
+  "enchantment.minecraft.looting": "\u00a7cLooting",
+  "enchantment.minecraft.loyalty": "\u00a7dLoyalty",
+  "enchantment.minecraft.luck_of_the_sea": "\u00a79Luck of the Sea",
+  "enchantment.minecraft.lure": "\u00a79Lure",
+  "enchantment.minecraft.mending": "\u00a7aMending",
+  "enchantment.minecraft.multishot": "\u00a76Multishot",
+  "enchantment.minecraft.piercing": "\u00a76Piercing",
+  "enchantment.minecraft.power": "\u00a76Power",
+  "enchantment.minecraft.projectile_protection": "\u00a7bProjectile Protection",
+  "enchantment.minecraft.protection": "\u00a7bProtection",
+  "enchantment.minecraft.punch": "\u00a76Punch",
+  "enchantment.minecraft.quick_charge": "\u00a76Quick Charge",
+  "enchantment.minecraft.respiration": "\u00a7bRespiration",
+  "enchantment.minecraft.riptide": "\u00a7dRiptide",
+  "enchantment.minecraft.sharpness": "\u00a7cSharpness",     
+  "enchantment.minecraft.soul_speed": "\u00a7bSoul Speed",
+  "enchantment.minecraft.silk_touch": "\u00a7eSilk Touch",
+  "enchantment.minecraft.smite": "\u00a7cSmite",
+  "enchantment.minecraft.sweeping": "\u00a7cSweeping Edge",
+  "enchantment.minecraft.thorns": "\u00a7bThorns",
+  "enchantment.minecraft.unbreaking": "\u00a7aUnbreaking",
+  "enchantment.minecraft.vanishing_curse": "\u00a74Curse of Vanishing",
+  "enchantment.level.1": "I",
+  "enchantment.level.2": "II",
+  "enchantment.level.3": "III",
+  "enchantment.level.4": "IV",
+  "enchantment.level.5": "V",
+  "enchantment.level.6": "VI",
+  "enchantment.level.7": "VII",
+  "enchantment.level.8": "VIII",
+  "enchantment.level.9": "IX",
+  "enchantment.level.10": "X",
   "container.brewing":"\u00a7f\ueff1\u00a7rBrewing Stand\u00a7f\ueff2"
 }
