--- a/§4QuackDuck §cTXT/assets/minecraft/lang/pl_pl.json
+++ b/§4QuackDuck §cTXT/assets/minecraft/lang/pl_pl.json
@@ -40,5 +40,52 @@
   "item.minecraft.cooked_salmon":"Pieczony łosoś §r6♠ §69.6♠§r",
   "item.minecraft.golden_carrot":"Złota marchewka §r6♠ §614.4♠§r",
   "item.minecraft.rabbit":"Surowy królik §r3♠ §61.8♠§r",
+  "enchantment.minecraft.aqua_affinity": "\u00a7bWydajno\u015b\u0107 pod wod\u0105",
+  "enchantment.minecraft.bane_of_arthropods": "\u00a7cZmora stawonog\u00f3w",
+  "enchantment.minecraft.binding_curse": "\u00a74Kl\u0105twa uwi\u0105zania",
+  "enchantment.minecraft.blast_protection": "\u00a7bOchrona przed wybuchem",
+  "enchantment.minecraft.channeling": "\u00a7dPora\u017cenie",
+  "enchantment.minecraft.depth_strider": "\u00a7bG\u0142\u0119binowy w\u0119drowiec",
+  "enchantment.minecraft.efficiency": "\u00a7eWydajno\u015b\u0107",
+  "enchantment.minecraft.feather_falling": "\u00a7bPowolne opadanie",
+  "enchantment.minecraft.fire_aspect": "\u00a7cZakl\u0119ty ogie\u0144",
+  "enchantment.minecraft.fire_protection": "\u00a7bOdporno\u015b\u0107 na ogie\u0144",
+  "enchantment.minecraft.flame": "\u00a76P\u0142omie\u0144",
+  "enchantment.minecraft.fortune": "\u00a7eSzcz\u0119\u015bcie",
+  "enchantment.minecraft.frost_walker": "\u00a7bMro\u017any piechur",
+  "enchantment.minecraft.impaling": "\u00a7dPrzebicie",
+  "enchantment.minecraft.infinity": "\u00a76Niesko\u0144czono\u015b\u0107",
+  "enchantment.minecraft.knockback": "\u00a7cOdrzut",
+  "enchantment.minecraft.looting": "\u00a7cGrabie\u017c",
+  "enchantment.minecraft.loyalty": "\u00a7dLojalno\u015b\u0107",
+  "enchantment.minecraft.luck_of_the_sea": "\u00a79Morska fortuna",
+  "enchantment.minecraft.lure": "\u00a79Przyn\u0119ta",
+  "enchantment.minecraft.mending": "\u00a7aNaprawa",
+  "enchantment.minecraft.multishot": "\u00a76Wielostrza\u0142",
+  "enchantment.minecraft.piercing": "\u00a76Przeszycie",
+  "enchantment.minecraft.power": "\u00a76Moc",
+  "enchantment.minecraft.projectile_protection": "\u00a7bOchrona przed pociskami",
+  "enchantment.minecraft.protection": "\u00a7bOchrona",
+  "enchantment.minecraft.punch": "\u00a76Uderzenie",
+  "enchantment.minecraft.quick_charge": "\u00a76Szybkie \u0142adowanie",
+  "enchantment.minecraft.respiration": "\u00a7bOddychanie",
+  "enchantment.minecraft.riptide": "\u00a7dTorpeda",
+  "enchantment.minecraft.sharpness": "\u00a7cOstro\u015b\u0107",
+  "enchantment.minecraft.silk_touch": "\u00a7eJedwabny dotyk",
+  "enchantment.minecraft.smite": "\u00a7cPogromca nieumar\u0142ych",
+  "enchantment.minecraft.sweeping": "\u00a7cSzerokie ostrze",
+  "enchantment.minecraft.thorns": "\u00a7bCiernie",
+  "enchantment.minecraft.unbreaking": "\u00a7aNiezniszczalno\u015b\u0107",
+  "enchantment.minecraft.vanishing_curse": "\u00a74Kl\u0105twa znikania",
+  "enchantment.level.1": "I",
+  "enchantment.level.2": "II",
+  "enchantment.level.3": "III",
+  "enchantment.level.4": "IV",
+  "enchantment.level.5": "V",
+  "enchantment.level.6": "VI",
+  "enchantment.level.7": "VII",
+  "enchantment.level.8": "VIII",
+  "enchantment.level.9": "IX",
+  "enchantment.level.10": "X",
   "container.brewing":"\u00a7f\ueff1\u00a7rBrewing Stand\u00a7f\ueff2"
 }
